--- a/example/cv.tex
+++ b/example/cv.tex
@@ -11,16 +11,14 @@
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 
 \documentclass[localFont,alternative,10pt,compact]{yaac-another-awesome-cv}
-\name{Christophe}{Roger}
-\tagline{Architecte Logiciel | Développeur/Concepteur Senior Java/JEE}
+\name{Amirhossein}{Saemi}
+\tagline{Software Engineer}
 \photo{2.5cm}{darwiin}
 \socialinfo{
-	\linkedin{christopheroger}
-	\github{darwiin}\\
-	\smartphone{+687 831 831}
-	\email{christophe.roger@mail.com}\\
-	\address{17 Rue de Bretagne, 98835 Dumbéa, Nouvelle-Calédonie}\\
-	\infos{Né le 23 septembre 1982 (35 ans) à Nouméa, Nouvelle-Calédonie}
+	\email{saemiamirhossein@gmail.com}\\
+	\linkedin{mrsaemir}
+	\github{mrsaemir}\\
+	\address{Saarbrücken, Germany}\\
 }
 
 % Uncomment the following line and use a value from 1.5cm to 2.5cm
@@ -35,7 +33,7 @@
 
 	\makecvfooter
 		{\textsc{\today}} % \selectlanguage{english}\today
-		{\textsc{Christophe Roger - CV}}
+		{\textsc{Amirhossein Saemi}}
 		{\thepage}
 
 	\input{section_headline_archi}
