--- a/example/section_competences.tex
+++ b/example/section_competences.tex
@@ -10,14 +10,20 @@
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 
 %Section compétences
-\sectionTitle{Compétences}{\faTasks}
+\sectionTitle{SKILLS}{\faTasks}
 
 	\begin{keywords}
-		\keywordsentry{Language de programmation}{\textbf{Java} (\textbf{JEE}, \textbf{JSE}, JME, Java Card Platform), Microsoft .Net (\textbf{C\#}), \textbf{Typescript}, Javascript}
-		\keywordsentry{Frameworks}{\textbf{Ionic}, Spring Boot, Spring, Angular, ZK}
-		\keywordsentry{Bases de données}{IBM DB2, Oracle Database, Microsoft SQL Server, MySQL, PostgreSQL}
-		\keywordsentry{Outils de développement}{\textbf{IntelliJ Idea}, \textbf{Visual Studio Code}, Eclipse, Maven, svn, git}
-		\keywordsentry{Middleware}{\textbf{JBoss EAP}, \textbf{Apache Tomcat}, Websphere Application Server (\emph{WAS})}
-		\keywordsentry{Systèmes d'exploitation}{Mac OS X, Windows Server, Windows 7, Linux Redhat, Linux CentOS}
-		\keywordsentry{Autres}{Firebase, architecture SOA, RFID, NFC et code barre 1D/2D}
+		\keywordsentry{Programming Languages}{Python, Rust, C}
+		\keywordsentry{Web Frameworks}{Django, Flask, FastAPI, Django REST Framework}
+		\keywordsentry{Big Data}{Apache Spark, Hadoop}
+		\keywordsentry{Databases}{PostgreSQL, Redis, InfluxDB}
+		\keywordsentry{Tools \& Methods}{Git, Docker, CI/CD, Test Driven Development}
+		\keywordsentry{Distributed Systems \& Architectures}{
+			\begin{itemize}
+				\item P2P, Event-Driven, Microservices
+				\item Replication, Sharding, Fault Tolerancy, Consistency
+				\item RPC, gRPC, Message Passing, PubSub, HTTP/HTTPS
+			\end{itemize}
+		}
+		\keywordsentry{Libraries}{Asyncio, SQLAlchemy, Pandas, Numpy, Tensorflow, Keras}
 	\end{keywords}
