--- a/example/section_experience_short.tex
+++ b/example/section_experience_short.tex
@@ -14,72 +14,38 @@
 %\renewcommand{\labelitemi}{$\bullet$}
 \begin{experiences}
   \experience
-    {Aujourd'hui}   {Architecte logiciel | Développeur/Concepteur Senior JEE}{EPI}{Nouvelle-Calédonie}
-    {Décembre 2015} {
-                      \begin{itemize}
-                        \item Applications hybrides : Conception et développement
-                        \item Développements de micro services REST avec Spring Boot : Conception et développement
-                        \item Product Owner : Projet Simply City
-                        \item Reconstruction de la plateforme d'intégration
-                        \item Migration des projets Java sous Maven
-                        \item Evolutions et corrections des bugs du framework de développement interne  
-                      \end{itemize}
-                    }
-                    {Spring Boot,IntelliJ Idea,Ionic 3,Typescript,Firebase,Apache Tomcat,Eclipse,Maven,Jenkins,Nexus}
+    {Oct 2024} {Internet Researcher}{\link{https://www.mpi-inf.mpg.de/departments/inet}{Max-Planck-Institut}}{Germany}
+    {Apr 2024} {
+      During my time at MPI, I was tasked with analyzing a massive dataset of 3.5 billion DNS TXT records to identify insecure or malicious use cases. This project aimed to replicate the findings of the paper “TXTing 101: Finding Security Issues in the Long Tail of DNS TXT Records” by Van Der Toorn et al. (2020) and extend the analysis using a different dataset. There, my primary responsibilities included analyzing and categorizing unique DNS TXT records and investigating abnormal use cases.
+    }
+    {Python, Apache Spark, Apache Hadoop}
   \emptySeparator
   \experience
-    {Novembre 2015} {Architecte logiciel | Développeur/Concepteur Senior JEE}{\link{http://www.cafat.nc}{CAFAT}}{Nouvelle-Calédonie}
-    {Avril 2014}    {
-                      \begin{itemize}
-                        \item Support et encadrement technique des équipes de développement                           
-                        \item Suivi, validation et intégration des développements externalisés                        
-                        \item Implémentation, analyse et livraison de correctifs de bugs sur les applicatifs métiers  
-                        \item Evolutions et corrections des bugs du framework de développement interne                
-                        \item Rédaction des dossiers d'architecture en collaboration avec les architectes fonctionnels
-                        \item Veille technologique                                                                    
-                      \end{itemize}
-                    }
-                    {IntelliJ Idea,JBoss EAP,Eclipse,Maven,Jenkins,Nexus}
+    {Now} {Software Engineer}{\link{https://geops.com}{geOps}}{Germany}
+    {July 2023} {
+      At geOps, I contributed to developing and enhancing multiple Python repositories as part of a collaborative team. My primary responsibilities included maintaining and expanding these repositories, with a particular emphasis on data pipelines. In this capacity, I ensured the smooth operation of data pipelines, handling the extraction, transformation, and loading of data. This role provided me with valuable experience working with geospatial and real-time data in the public transport sector. Additionally, I worked on upgrading existing repositories to use SQLAlchemy2 and integrating its asynchronous drivers fo numerous components. I also contributed to the integration of various transportation APIs from providers such as Deutsche Bahn, Swiss Railways, S-Bahn Munich, and others.    
+    }
+    {Python, Asyncio, Django, Flask, SQLAlchemy, GraphQL, PostgreSQL, Redis, GTFS/GTFS-RT}
   \emptySeparator
   \experience
-    {Mars 2014}     {Architecte logiciel | Développeur/Concepteur Senior JEE}{Bull SAS}{France}
-    {Avril 2012}    {
-                      \begin{itemize}
-                        \item Reconstruction du dépôt fiduciaire de logiciels de Bull Coriolis : réalisation, coordination et reporting
-                        \item Migration du serveur métier vers Open Cobol : suivi de projet et reporting                
-                        \item Solution documentaire collaborative (wiki) : mise en place et formation                   
-                        \item Evolutions et corrections : analyse, conception et développement                          
-                        \item Mise en place de conventions de code                                                      
-                        \item Mise en place d'un framework de développement d'interface web (jQuery, Bootstrap, taglibs)
-                      \end{itemize}
-                    }
-                    {Tomcat,Spring,Eclipse,Maven,Oracle DB,Hibernate,RichFaces,AngularJS,jQuery,Bootstrap,LESS}
+  {Mar 2023} {Software Engineer}{\link{https://gridsingularity.com/}{GridSingularity}}{Germany}
+  {Apr 2022} {
+    GridSingularity’s platform enables the creation of peer-to-peer, grid-aware energy marketplaces, including energy communities, that facilitate the exchange of energy between producers and consumers in a secure and transparent manner. At GSy, I was responsible for further developing the energy exchange, the backend, and the client SDKs using the Python programming language, a set of different database and messaging technologies. The work on the backend included:
+  }
+  {Python, Django, GraphQL, PostgreSQL, DRF}
   \emptySeparator
-  \consultantexperience
-  {Mars 2012}       {Ingénieur Consultant}{Altran Technologies}{France}
-  {Décembre 2007}   {IT Specialist}{IBM, Software Solutions Center of Excellence}
-                    {
-                      \begin{itemize}
-                        \item \textbf{Projet eTACT} pour \href{https://www.edqm.eu/fr/contexte-mission-cd-p-phcmed.html}{EDQM} : Conception et développement JEE.
-                        \item Application \emph{Android} pour tablette : Conception et développement.
-                        \item Projets d'intégration, \emph{Enterprise Service Bus} (ESB) et moteur de processus:
-                        \begin{itemize}
-                          \item Conception et développement JEE
-                          \item Définition et implémentation des processus métiers et médiations
-                        \end{itemize}
-                        \item Solutions RFID : Conception et développement Java (JEE, JSE et JME), Analyse, \emph{POC}, documentation et présentation technique du protocole ONS
-                      \end{itemize}
-                    }
-                    {Rational Software Architect (\emph{RSA}),Eclipse,\emph{WAS} 7,DB2,Hibernate,Ant,RichFaces,Infosphere Traceability Server,Android,Websphere Integration Developer,Websphere Process Server}
-  \emptySeparator         
   \experience
-  {Novembre 2007}  {Ingénieur d'étude}{IBM}{France}
-  {Février 2007}   {
-                      Projet de prototypage \emph{Campus Nova} pour le Crédit Agricole : Développement d'une solution de paiement NFC sur téléphones portables.  
-                      \begin{itemize}
-                        \item Implémentation d'un porte monnaie électronique                                            
-                        \item Intégration avec une plateforme de paiement en ligne  
-                      \end{itemize}
-                  }
-                  {J2ME,Java Card,DB2,\emph{WAS}}  
+  {Mar 2022} {Software Engineer}{\link{https://www.ctatuscolana.it/}{Tuema}}{Italy}
+  {Jan 2020} {
+    At Tuema I was responsible for developing and maintaining the backend and the CI/CD pipelines for the PlayViaggi project. The work on the backend included designing an integrated accounting system and migrating existing Django Template to REST APIs while refactoring legacy code.
+  }
+  {Python, Django, PostgreSQL, DRF, Docker}
+  \emptySeparator
+  \experience
+  {Jan 2020} {Software Engineer Intern}{Mahsan}{Iran}
+  {Apr 2019} {
+    During my internship at Mahsan, I was responsible for developing web APIs that allowed users to interact a DataDiode device. A DataDiode functions similarly to a firewall but provides more guarantees regarding one-way data flow. My primary focus at Mahsan was to create APIs that could modify settings across various system components, including the operating system, DD engine, OpenLDAP, network interfaces, NTP, Active Directory, and a range of other system-level settings.
+  }
+  {Python, Django, Linux}
+  \emptySeparator
 \end{experiences}
