--- a/example/section_headline_archi.tex
+++ b/example/section_headline_archi.tex
@@ -1,3 +1,3 @@
 \par{
-Développeur et concepteur JEE dès la fin de mes études, j'ai une expérience de développement sur l'ensemble de l'écosystème Java (Android, J2ME sur PDA et Javacard sur chipset NFC). J'occupe aujourd'hui un poste d'architecte logiciel et suis passionné par mon métier et par les nouvelles technologies en général. Je souhaite aujourd'hui poursuivre ma carrière sur des projets de développement innovants en qualité d'architecte logiciel et/ou de développeur/concepteur.
+    Experienced backend developer with a strong academic background in distributed systems, operating systems, and computer networks. Demonstrated capabilities in developing applications in various fields such as Mobility, Networking, Energy, and Tourism with a focus on performance and reliability. Proficient in leveraging domain-specific concepts to deliver robust and efficient backend solutions, showcasing adaptability and transferable knowledge across industries. Committed to writing testable, standard code to ensure maintainability in all projects.
 }
