Added full info

--- a/example/cv.tex
+++ b/example/cv.tex
@@ -42,8 +42,8 @@
 	\input{section_langues}					% Section langues
 	\input{section_scolarite}				% Section scolarité
 	%\input{section_interets}				% Section intérêts
-	\input{section_projets}
-	\input{section_references} 				% Section références
-	\input{section_publications}			% Section publications
+	% \input{section_projets}
+	% \input{section_references} 				% Section références
+	% \input{section_publications}			% Section publications
 
 \end{document}
