--- a/example/section_experience_short.tex
+++ b/example/section_experience_short.tex
@@ -10,7 +10,7 @@
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 
 %Section: Work Experience at the top
-\sectionTitle{Expériences Professionelles}{\faSuitcase}
+\sectionTitle{Experiences}{\faSuitcase}
 %\renewcommand{\labelitemi}{$\bullet$}
 \begin{experiences}
   \experience
@@ -23,7 +23,7 @@
   \experience
     {Now} {Software Engineer}{\link{https://geops.com}{geOps}}{Germany}
     {July 2023} {
-      At geOps, I contributed to developing and enhancing multiple Python repositories as part of a collaborative team. My primary responsibilities included maintaining and expanding these repositories, with a particular emphasis on data pipelines. In this capacity, I ensured the smooth operation of data pipelines, handling the extraction, transformation, and loading of data. This role provided me with valuable experience working with geospatial and real-time data in the public transport sector. Additionally, I worked on upgrading existing repositories to use SQLAlchemy2 and integrating its asynchronous drivers fo numerous components. I also contributed to the integration of various transportation APIs from providers such as Deutsche Bahn, Swiss Railways, S-Bahn Munich, and others.    
+      At geOps, I contributed to developing and enhancing multiple Python repositories as part of a collaborative team. My primary responsibilities included maintaining and expanding these repositories, with a particular emphasis on data pipelines. In this capacity, I ensured the smooth operation of data pipelines, handling the extraction, transformation, and loading of data. This role provided me with valuable experience working with geospatial and real-time data in the public transport sector. Additionally, I worked on upgrading existing repositories to use SQLAlchemy2 and integrating its asynchronous drivers for numerous components. I also contributed to the integration of various transportation APIs from providers such as Deutsche Bahn, Swiss Railways, S-Bahn Munich, and others.    
     }
     {Python, Asyncio, Django, Flask, SQLAlchemy, GraphQL, PostgreSQL, Redis, GTFS/GTFS-RT}
   \emptySeparator
@@ -31,6 +31,11 @@
   {Mar 2023} {Software Engineer}{\link{https://gridsingularity.com/}{GridSingularity}}{Germany}
   {Apr 2022} {
     GridSingularity’s platform enables the creation of peer-to-peer, grid-aware energy marketplaces, including energy communities, that facilitate the exchange of energy between producers and consumers in a secure and transparent manner. At GSy, I was responsible for further developing the energy exchange, the backend, and the client SDKs using the Python programming language, a set of different database and messaging technologies. The work on the backend included:
+    \begin{itemize}
+      \item Adding new features to the GSy energy exchange as well as improving its performance
+      \item Designing data processing pipelines, database schemas, and writing the related business logic.
+      \item Writing and maintaining tests and documents.
+    \end{itemize}
   }
   {Python, Django, GraphQL, PostgreSQL, DRF}
   \emptySeparator
