--- a/example/section_langues.tex
+++ b/example/section_langues.tex
@@ -10,17 +10,18 @@
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 
 %Section: Languages
-\twocolumnsection
-{\sectionTitle{Langues}{\faLanguage}
+% \twocolumnsection
+{\sectionTitle{Languages}{\faLanguage}
 \begin{skills}
-	\skill{Français}{5}
-	\skill{Anglais}{4}
+	\skill{Persian}{5}
+	\skill{English}{4}
+	\skill{German}{2}
 \end{skills}}
-{\sectionTitle{Forces}{\faPlus}
-\vspace{1em}
-\begin{itemize}
-	\item Passioné
-	\item Motivé                    
-    \item Autonome
-\end{itemize}
-}
+% {\sectionTitle{Forces}{\faPlus}
+% \vspace{1em}
+% \begin{itemize}
+% 	\item Passioné
+% 	\item Motivé                    
+%     \item Autonome
+% \end{itemize}
+% }
