--- a/example/section_scolarite.tex
+++ b/example/section_scolarite.tex
@@ -10,15 +10,11 @@
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 
 %Section: Scholarships and additional info
-\sectionTitle{Formation}{\faGraduationCap}
+\sectionTitle{Educations}{\faGraduationCap}
 
 \begin{scholarship}
-	\scholarshipentry{2007}
-					{Master STIC Professionel filière MBDS de l'Université de Nice Sophia Antipolis (Master Informatique spécialité Multimédia, Base de Données et intégration de Systèmes)}
-	\scholarshipentry{2005}
-					{Licence Sciences et Technologies, Mention Informatique, de l'Université de Nouvelle-Calédonie}
-	\scholarshipentry{2004}
-					{BTS Informatique de Gestion option administrateurs de réseaux}
-	\scholarshipentry{2000}
-					{Baccalauréat Scientifique option Mathématiques}
+	\scholarshipentry{2023-2025}
+					{M.Sc. Computer Science - Universität des Saarlandes - Germany}
+	\scholarshipentry{2017-2021}
+					{B.Sc. Computer Engineering - Qom University of Technology - Iran}
 \end{scholarship}
