--- a/example/section_experience_short.tex
+++ b/example/section_experience_short.tex
@@ -16,25 +16,32 @@
   \experience
     {Oct 2024} {Internet Researcher}{\link{https://www.mpi-inf.mpg.de/departments/inet}{Max-Planck-Institut}}{Germany}
     {Apr 2024} {
-      During my time at MPI, I was tasked with analyzing a massive dataset of 3.5 billion DNS TXT records to identify insecure or malicious use cases. This project aimed to replicate the findings of the paper “TXTing 101: Finding Security Issues in the Long Tail of DNS TXT Records” by Van Der Toorn et al. (2020) and extend the analysis using a different dataset. There, my primary responsibilities included analyzing and categorizing unique DNS TXT records and investigating abnormal use cases.
+      \begin{itemize}
+        \item Analyze a dataset of 3.5 billion DNS TXT records to identify insecure or malicious use cases.
+        \item Replicate the findings of the paper “TXTing 101 : Finding
+        Security Issues in the Long Tail of DNS TXT Records” by Van Der Toorn et al.
+      \end{itemize}
     }
     {Python, Apache Spark, Apache Hadoop}
   \emptySeparator
   \experience
     {Now} {Software Engineer}{\link{https://geops.com}{geOps}}{Germany}
     {July 2023} {
-      At geOps, I contributed to developing and enhancing multiple Python repositories as part of a collaborative team. My primary responsibilities included maintaining and expanding these repositories, with a particular emphasis on data pipelines. In this capacity, I ensured the smooth operation of data pipelines, handling the extraction, transformation, and loading of data. This role provided me with valuable experience working with geospatial and real-time data in the public transport sector. Additionally, I worked on upgrading existing repositories to use SQLAlchemy2 and integrating its asynchronous drivers for numerous components. I also contributed to the integration of various transportation APIs from providers such as Deutsche Bahn, Swiss Railways, S-Bahn Munich, and others.    
+      \begin{itemize}
+        \item Contributed to the development and enhancement of multiple Python repositories.
+        \item Upgraded existing repositories to use SQLAlchemy2 and integrated its asynchronous drivers.
+        \item Contributed to the integration of APIs from Deutsche Bahn, Swiss Railways, and S-Bahn Munich.
+      \end{itemize}
     }
     {Python, Asyncio, Django, Flask, SQLAlchemy, GraphQL, PostgreSQL, Redis, GTFS/GTFS-RT}
   \emptySeparator
   \experience
   {Mar 2023} {Software Engineer}{\link{https://gridsingularity.com/}{GridSingularity}}{Germany}
   {Apr 2022} {
-    GridSingularity’s platform enables the creation of peer-to-peer, grid-aware energy marketplaces, including energy communities, that facilitate the exchange of energy between producers and consumers in a secure and transparent manner. At GSy, I was responsible for further developing the energy exchange, the backend, and the client SDKs using the Python programming language, a set of different database and messaging technologies. The work on the backend included:
     \begin{itemize}
-      \item Adding new features to the GSy energy exchange as well as improving its performance
-      \item Designing data processing pipelines, database schemas, and writing the related business logic.
-      \item Writing and maintaining tests and documents.
+      \item Further developed the energy exchange for different energy markets.
+      \item Enhanced matching strategies for better bid/offer matching.
+      \item Refactored legacy code and improved performance.
     \end{itemize}
   }
   {Python, Django, GraphQL, PostgreSQL, DRF}
@@ -42,14 +49,22 @@
   \experience
   {Mar 2022} {Software Engineer}{\link{https://www.ctatuscolana.it/}{Tuema}}{Italy}
   {Jan 2020} {
-    At Tuema I was responsible for developing and maintaining the backend and the CI/CD pipelines for the PlayViaggi project. The work on the backend included designing an integrated accounting system and migrating existing Django Template to REST APIs while refactoring legacy code.
+    \begin{itemize}
+      \item Designed an integrated accounting system.
+      \item Migrated existing Django templates to REST APIs.
+      \item Developed and maintained CI/CD pipelines.
+    \end{itemize}
   }
   {Python, Django, PostgreSQL, DRF, Docker}
   \emptySeparator
   \experience
   {Jan 2020} {Software Engineer Intern}{Mahsan}{Iran}
   {Apr 2019} {
-    During my internship at Mahsan, I was responsible for developing web APIs that allowed users to interact a DataDiode device. A DataDiode functions similarly to a firewall but provides more guarantees regarding one-way data flow. My primary focus at Mahsan was to create APIs that could modify settings across various system components, including the operating system, DD engine, OpenLDAP, network interfaces, NTP, Active Directory, and a range of other system-level settings.
+    \begin{itemize}
+      \item Developed web APIs for interacting with a DataDiode device.
+      \item Created APIs to modify settings across various system components such as
+      the operating system, DD engine, OpenLDAP, network, NTP, and Active Directory.
+    \end{itemize}
   }
   {Python, Django, Linux}
   \emptySeparator
