--- a/example/section_headline_archi.tex
+++ b/example/section_headline_archi.tex
@@ -1,3 +1,3 @@
 \par{
-    Experienced backend developer with a strong academic background in distributed systems, operating systems, and computer networks. Demonstrated capabilities in developing applications in various fields such as Mobility, Networking, Energy, and Tourism with a focus on performance and reliability. Proficient in leveraging domain-specific concepts to deliver robust and efficient backend solutions, showcasing adaptability and transferable knowledge across industries. Committed to writing testable, standard code to ensure maintainability in all projects.
+    Experienced backend developer with a strong academic background in distributed systems, operating systems, and computer networks. Demonstrated capabilities in developing applications in various fields such as Mobility, Networking, and Energy with a focus on performance and reliability. Proficient in leveraging domain-specific concepts to deliver robust and efficient backend solutions, showcasing adaptability and transferable knowledge across industries. Committed to writing testable, standard code to ensure maintainability in all projects.
 }
