Add some points

--- a/example/section_experience_short.tex
+++ b/example/section_experience_short.tex
@@ -16,11 +16,7 @@
   \experience
     {Oct 2024} {Internet Researcher}{\link{https://www.mpi-inf.mpg.de/departments/inet}{Max-Planck-Institut}}{Germany}
     {Apr 2024} {
-      \begin{itemize}
-        \item Analyze a dataset of 3.5 billion DNS TXT records to identify insecure or malicious use cases.
-        \item Replicate the findings of the paper “TXTing 101 : Finding
-        Security Issues in the Long Tail of DNS TXT Records” by Van Der Toorn et al.
-      \end{itemize}
+      During my time at MPI, I was tasked with analyzing a massive dataset of 3.5 billion DNS TXT records to identify insecure or malicious use cases. This project aimed to replicate the findings of the paper “TXTing 101: Finding Security Issues in the Long Tail of DNS TXT Records” by Van Der Toorn et al. (2020) and extend the analysis using a different dataset. There, my primary responsibilities included analyzing and categorizing unique DNS TXT records and investigating abnormal use cases.
     }
     {Python, Apache Spark, Apache Hadoop}
   \emptySeparator
@@ -29,6 +25,7 @@
     {July 2023} {
       \begin{itemize}
         \item Contributed to the development and enhancement of multiple Python repositories.
+        \item Contributed to the refactoring of GTFS/GTFS-RT ingestion core for better scalability.
         \item Upgraded existing repositories to use SQLAlchemy2 and integrated its asynchronous drivers.
         \item Contributed to the integration of APIs from Deutsche Bahn, Swiss Railways, and S-Bahn Munich.
       \end{itemize}
@@ -42,6 +39,7 @@
       \item Further developed the energy exchange for different energy markets.
       \item Enhanced matching strategies for better bid/offer matching.
       \item Refactored legacy code and improved performance.
+      \item Contributed to the development of digital twins for different energy assets.
     \end{itemize}
   }
   {Python, Django, GraphQL, PostgreSQL, DRF}
@@ -50,6 +48,7 @@
   {Mar 2022} {Software Engineer}{\link{https://www.ctatuscolana.it/}{Tuema}}{Italy}
   {Jan 2020} {
     \begin{itemize}
+      \item Managed a small team of backend developers.
       \item Designed an integrated accounting system.
       \item Migrated existing Django templates to REST APIs.
       \item Developed and maintained CI/CD pipelines.
@@ -64,6 +63,7 @@
       \item Developed web APIs for interacting with a DataDiode device.
       \item Created APIs to modify settings across various system components such as
       the operating system, DD engine, OpenLDAP, network, NTP, and Active Directory.
+      \item Developed and maintained CI/CD pipelines.
     \end{itemize}
   }
   {Python, Django, Linux}
