--- a/example/section_experience_short.tex
+++ b/example/section_experience_short.tex
@@ -23,23 +23,28 @@
   \experience
     {Now} {Software Engineer}{\link{https://geops.com}{geOps}}{Germany}
     {July 2023} {
+      geOps develops modern web applications based on geospatial and real-time data,
+      with a strong focus on open-source technologies in transport, mobility, logistics,
+      and the environment. At geOps, my responsibilities included:
       \begin{itemize}
-        \item Contributed to the development and enhancement of multiple Python repositories.
-        \item Contributed to the refactoring of GTFS/GTFS-RT ingestion core for better scalability.
-        \item Upgraded existing repositories to use SQLAlchemy2 and integrated its asynchronous drivers.
-        \item Contributed to the integration of APIs from Deutsche Bahn, Swiss Railways, and S-Bahn Munich.
+        \item Refactoring data processing components to enhance scalability and performance.
+        \item Upgrading codebases to use SQLAlchemy2 and integrating asynchronous drivers for efficiency.
+        \item Contributing to the integration of APIs from Deutsche Bahn, Swiss Railways, and S-Bahn Munich.
       \end{itemize}
     }
-    {Python, Asyncio, Django, Flask, SQLAlchemy, GraphQL, PostgreSQL, Redis, GTFS/GTFS-RT}
+    {Python, Asyncio, Django, Flask, SQLAlchemy, PostgreSQL, Redis, GTFS/GTFS-RT}
   \emptySeparator
   \experience
   {Mar 2023} {Software Engineer}{\link{https://gridsingularity.com/}{GridSingularity}}{Germany}
   {Apr 2022} {
+    Grid Singularity is an awarded open-source technology innovator,
+    developing peer-to-peer energy exchange marketplaces, and a cofounder
+    of the Energy Web Foundation. At GSy, my responsibilities included,
+    but were not limited to:
     \begin{itemize}
-      \item Further developed the energy exchange for different energy markets.
-      \item Enhanced matching strategies for better bid/offer matching.
-      \item Refactored legacy code and improved performance.
-      \item Contributed to the development of digital twins for different energy assets.
+      \item Extending the Energy Exchange Platform across multiple energy markets.
+      \item Enhancing matching strategies for better bid/offer matching.
+      \item Refactoring legacy codebase, enhancing system performance and stability.
     \end{itemize}
   }
   {Python, Django, GraphQL, PostgreSQL, DRF}
@@ -47,25 +52,15 @@
   \experience
   {Mar 2022} {Software Engineer}{\link{https://www.ctatuscolana.it/}{Tuema}}{Italy}
   {Jan 2020} {
+    Tuema is a global team of developers and designers, specializing in web and mobile development.
+    At Tuema, my responsibilities included:
     \begin{itemize}
-      \item Managed a small team of backend developers.
-      \item Designed an integrated accounting system.
-      \item Migrated existing Django templates to REST APIs.
-      \item Developed and maintained CI/CD pipelines.
+      \item Leading a small team of 3 backend developers.
+      \item Designing an integrated accounting system.
+      \item Migrating existing Django templates to REST APIs.
+      \item Building and maintaining CI/CD pipelines to reduce deployment time.
     \end{itemize}
   }
   {Python, Django, PostgreSQL, DRF, Docker}
-  \emptySeparator
-  \experience
-  {Jan 2020} {Software Engineer Intern}{Mahsan}{Iran}
-  {Apr 2019} {
-    \begin{itemize}
-      \item Developed web APIs for interacting with a DataDiode device.
-      \item Created APIs to modify settings across various system components such as
-      the operating system, DD engine, OpenLDAP, network, NTP, and Active Directory.
-      \item Developed and maintained CI/CD pipelines.
-    \end{itemize}
-  }
-  {Python, Django, Linux}
   \emptySeparator
 \end{experiences}
