--- a/example/section_competences.tex
+++ b/example/section_competences.tex
@@ -13,17 +13,10 @@
 \sectionTitle{SKILLS}{\faTasks}
 
 	\begin{keywords}
-		\keywordsentry{Programming Languages}{Python, Rust, C}
-		\keywordsentry{Web Frameworks}{Django, Flask, FastAPI, Django REST Framework}
-		\keywordsentry{Big Data}{Apache Spark, Hadoop}
+		\keywordsentry{Programming Languages}{Python, Go, Rust}
 		\keywordsentry{Databases}{PostgreSQL, Redis, InfluxDB}
+		\keywordsentry{Web Frameworks}{Django, Flask, FastAPI, Django REST Framework}
 		\keywordsentry{Tools \& Methods}{Git, Docker, CI/CD, Test Driven Development}
-		\keywordsentry{Distributed Systems \& Architectures}{
-			\begin{itemize}
-				\item P2P, Event-Driven, Microservices
-				\item Replication, Sharding, Fault Tolerancy, Consistency
-				\item RPC, gRPC, Message Passing, PubSub, HTTP/HTTPS
-			\end{itemize}
-		}
-		\keywordsentry{Libraries}{Asyncio, SQLAlchemy, Pandas, Numpy, Tensorflow, Keras}
+		\keywordsentry{Big Data}{Apache Spark}
+		\keywordsentry{Distributed Systems}
 	\end{keywords}
