--- a/example/cv.tex
+++ b/example/cv.tex
@@ -37,12 +37,17 @@
 		{\thepage}
 
 	\input{section_headline_archi}
+	\vspace{0.3cm}
 	\input{section_competences}				% Section compétence
+	\vspace{0.3cm}
 	\input{section_experience_short}		% Section expérience
+	\vspace{2cm}
+	\input{section_projets}
+	\vspace{0.3cm}
 	\input{section_langues}					% Section langues
+	\vspace{0.3cm}
 	\input{section_scolarite}				% Section scolarité
 	%\input{section_interets}				% Section intérêts
-	% \input{section_projets}
 	% \input{section_references} 				% Section références
 	% \input{section_publications}			% Section publications
 
