--- a/example/section_competences.tex
+++ b/example/section_competences.tex
@@ -16,7 +16,6 @@
 		\keywordsentry{Programming Languages}{Python, Go, Rust}
 		\keywordsentry{Databases}{PostgreSQL, Redis, InfluxDB}
 		\keywordsentry{Web Frameworks}{Django, Flask, FastAPI, Django REST Framework}
-		\keywordsentry{Tools \& Methods}{Git, Docker, CI/CD, Test Driven Development}
-		\keywordsentry{Big Data}{Apache Spark}
-		\keywordsentry{Distributed Systems}
+		\keywordsentry{Tools \& Practices}{Git, Docker, CI/CD, Test Driven Development}
+		\keywordsentry{Big Data \& Distributed Systems}{Apache Spark}
 	\end{keywords}
