--- a/example/section_headline_archi.tex
+++ b/example/section_headline_archi.tex
@@ -1,10 +1,9 @@
 \par{
-    Experienced backend developer and research enthusiast with an
-    academic background in distributed systems, operating systems, and
-    computer networks. Currently working in the Internet Architecture
-    Research Group at the Max Planck Institute, where I focus on DNS and
-    the development of tools for large-scale internet scans.
-    I am seeking a position that allows me to further develop my
-    research skills, apply my knowledge in a practical setting,
-    and contribute to cutting-edge advancements.
+    Backend developer with 5+ years of experience and a strong academic background in
+    distributed systems, operating systems, and computer networks. Demonstrated capabilities
+    in developing applications in various fields such as Mobility, Networking, and Energy with
+    a focus on performance and reliability. Proficient in leveraging domain-specific concepts
+    to deliver robust and efficient backend solutions, showcasing adaptability and transferable
+    knowledge across industries. Committed to writing testable, standard code to ensure
+    maintainability in all projects.
 }
