--- a/example/section_experience_short.tex
+++ b/example/section_experience_short.tex
@@ -20,7 +20,7 @@
         to deliver a high-performance tool in Go for large-scale IPv6 reverse DNS mapping.
         My responsibilities included:
         \begin{itemize}
-            \item Extending \href{https://github.com/DNS-MSMT-INET/yodns}{YoDNS} for IPv6 reverse DNS scanning.
+            \item Extending {\link{https://github.com/DNS-MSMT-INET/yodns}{YoDNS}} for IPv6 reverse DNS scanning.
             \item Implementing load-balancing to protect nameservers.
             \item Building heuristic probing for efficient DNS tree enumeration.
         \end{itemize}
