Add Open to Relocation

--- a/example/cv.tex
+++ b/example/cv.tex
@@ -18,7 +18,7 @@
 	\email{saemiamirhossein@gmail.com}\\
 	\linkedin{mrsaemir}
 	\github{mrsaemir}\\
-	\address{Saarbrücken, Germany}\\
+	\address{Saarbrücken, Germany | Open to Relocation}\\
 }
 
 % Uncomment the following line and use a value from 1.5cm to 2.5cm
